fix: arrow alignment on edge case

--- a/apps/web/src/app/blog/articles/articles.component.scss
+++ b/apps/web/src/app/blog/articles/articles.component.scss
@@ -84,6 +84,7 @@
       }
 
       &-tail {
+        display: inline-block;
         padding-right: 38px;
         // Set up for absolute child
         position: relative;
